plugins {
    id 'java'
    id 'jacoco'

}

version '1.0'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.assertj:assertj-core:3.27.6'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.14.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.14.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.14.0'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.14.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
jacoco {
    toolVersion = "0.8.12"
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport

}

jacocoTestReport {
    dependsOn test
    reports {
        html.required = true
        xml.required = false
        csv.required = false
    }
}

